--- a/TicGame.css
+++ b/TicGame.css
@@ -75,3 +75,31 @@ footer {
     z-index: 1000;
     overflow: hidden;
 }
+
+a {
+    text-decoration: none;
+    display: inline-block;
+    padding: 8px 16px;
+  }
+  
+a:hover {
+    background-color: #ffffffd7;
+    color: black;
+}
+
+.previous {
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    padding: 8px 18px;
+    margin: 10px;
+    background-color: #000000ce; 
+    color: #ffffff;
+    border-radius: 5px;
+    cursor: pointer;
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    font-size: 35px;
+    font-weight: 700;
+    border-radius: 50%;
+}
