--- a/nonogramlvl1.css
+++ b/nonogramlvl1.css
@@ -10,6 +10,8 @@ body {
     -webkit-user-select: none; /* Safari */
     -ms-user-select: none; /* IE 10 and IE 11 */
     user-select: none; /* Standard syntax */
+    overflow: hidden;
+
 }
 
 h1 {
@@ -143,3 +145,31 @@ div {
         z-index: 1000;
         overflow: hidden;
     }
+
+    .previous {
+        font-family: Arial, Helvetica, sans-serif;
+        display: inline-block;
+        padding: 8px 18px;
+        margin: 10px;
+        background-color: #000000e1; 
+        color: #ffffff;
+        border-radius: 5px;
+        cursor: pointer;
+        position: absolute;
+        top: 8px;
+        left: 8px;
+        font-size: 35px;
+        font-weight: 700;
+        border-radius: 50%;
+    }
+    
+    a {
+        text-decoration: none;
+        display: inline-block;
+        padding: 8px 16px;
+      }
+      
+      a:hover {
+        background-color: #ffffffd7;
+        color: black;
+      }
