--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Montserrat, sans-serif;
+    font-family: Orbitron, sans-serif;
 }
 
 body {
@@ -60,20 +60,24 @@ main {
 .game-links {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    width: 90%;
+    gap: 20px;
+    width: 150%;
     max-width: 960px;
 }
-
+span{
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+}
 .game-link {
     background: #310716ae;
     box-shadow: 0 0 30px -5px #000000;
 
+    width: 220px;
+    height: 120px;
     text-align: center;
     border: 1px solid #310716ae;
     border-radius: 8px;
     padding: 10px;
-    text-decoration: none;
     color: #ffffff;
     transition: box-shadow 0.3s ease;
 }
@@ -86,6 +90,8 @@ main {
 .game-link img {
     width: 80px;
     height: 80px;
+    left:0px;
+    display:flex;
 }
 
 #about {
@@ -109,7 +115,7 @@ footer {
     text-align: center;
     padding: 10px 0;
 
-    font-family: Montserrat, sans-serif;
+    font-family: Orbitron, sans-serif;
     width: 100%;
     background-color: #1f1f1f;
     position: fixed;
