--- a/sudoku_styles.css
+++ b/sudoku_styles.css
@@ -70,10 +70,11 @@ a:hover {
 }
 
 .previous {
+    font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
     padding: 8px 18px;
     margin: 10px;
-    background-color: #000000e1; /* Green background */
+    background-color: #000000e1;
     color: #ffffff;
     border-radius: 5px;
     cursor: pointer;
